--- a/src/layouts/PinnedPost/styles.module.css
+++ b/src/layouts/PinnedPost/styles.module.css
@@ -4,7 +4,6 @@
   border: 1px solid #ebedf0; */
   border-radius: 8px;
   margin-bottom: 1rem;
-
 }
 .title {
   margin-bottom: 16px;
@@ -16,13 +15,19 @@
   color: #000000;
   padding: 0 var(--spacing-12);
 }
-.posts-container{
+.posts-container {
   display: flex;
   flex-direction: column;
   gap: var(--spacing-16);
 }
 
 @media screen and (max-width: 1100px) {
+  .title {
+    margin-bottom: 0px;
+  }
+  .posts-container {
+    gap: 8px;
+  }
   .wrapper {
     padding: 0;
     /* background: #ffffff;
